Further overall, provider section style refinements. Solved jump link issue, thankfully

--- a/sites/all/themes/ask_theme/css/fonts.css
+++ b/sites/all/themes/ask_theme/css/fonts.css
@@ -159,9 +159,10 @@ a{color:#394E77; text-decoration:underline; font-family:'AllerRegular';}
 .main-menu a{font-family:'alegreya_sansregular'; font-size:1.3em;}
 .main-menu a:hover, .main-menu a.active{color:#d8a014;}
 .main-menu a.active{border-bottom:#d8a014 3px solid;}
-h1, h2, h3, .subnav-style a{font-family:'alegreya_sansthin';}
-h1{color:#fff; font-size:2.3em; margin:9px 0 0 35px;}
-h2{color:#5D93B4; font-size:2.0em;}
+h1, h2, .subnav-style a{font-family:'alegreya_sansthin';}
+h1{color:#fff; font-size:2.3em; margin:9px 0 0 35px; letter-spacing:-.01em;}
+h2{color:#5D93B4; font-size:2.0em; letter-spacing:-.02em;}
+h3{color:#d8a014; font-family:'alegreya_sansregular'; margin-bottom:10px; letter-spacing:-.01em;}
 .resource-header, .reference-header{font-family:'alegreya_sansregular'; font-size:1.5em; text-transform:uppercase; padding-top:20px; margin:40px 0 15px 0;}
 .reference-header{color:#D8A014; /*border-top:#D8A014 1px solid;*/}
 .resource-header{color:#7a992c; /*border-top:#7a992c 1px solid;*/}
